# PassVault

./: .gitignore  Cargo.toml  LICENSE  README.md  sequencediagram.drawio
src/: main.rs  step.rs  utils.rs
src/custom_widget/: card.rs  circle_button.rs  container_border.rs  error_text.rs  image_button.rs  mod.rs  toast.rs
src/data_struct/: account.rs
src/data_structure/: account.rs  config.rs  mod.rs
src/enums/: error.rs  message.rs  mod.rs  step.rs
src/login/: mod.rs
src/view/: add_modal_view.rs  edit_modal_view.rs  mod.rs  password_check_view.rs  password_creation_view.rs  password_manager_view.rs  sk_view.rs  welcome_view.rs
