[package]
name = "PassVault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"]}
base64 = "0.22.0" 
rand = "0.8.5"
directories = "5.0.1"
iced = {version = "0.12.1", features = ["svg", "tokio", "image", "advanced", "debug", "canvas", "lazy"]}
iced_aw = "0.8.0"