[package]
name = "pass_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"]}
base64 = "0.22.0" 
rand = "0.8.5"
directories = "5.0.1"
iced = {version = "0.12.1", features = ["svg", "tokio", "image", "advanced", "debug", "canvas", "lazy"]}
iced_aw = {version = "0.8.0", features = ["icons", "floating_element", "card", "modal"]}
ring = "0.17.8"
hex = "0.4.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

rfd = "0.12.1"